# code_dmd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: dmdreader.yml
scripts/: install-software
src/: dmd_interface_wpc.pio  dmdreader.c
